@@ -43,7 +43,7 @@ void
 debugger_variable_init( void )
 {
   debugger_variables = g_hash_table_new_full( g_str_hash, g_str_equal,
-                                              free, NULL );
+                                              libspectrum_free, NULL );
 }
 
 void
